# loan-planning-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  task.md
alembic/: env.py
alembic/versions/: 2025_03_29_2016-cc5f08c67c8e_init.py
components/core/: config.py  database.py  init_db.py  schemas.py  security.py
components/credit/: models.py
components/dictionary/: models.py  schemas.py
components/payment/: models.py
components/plan/: models.py  repository.py  schemas.py
components/user/: models.py  repository.py  utils.py
restapi/: router.py
restapi/endpoints/: auth.py  health_check.py  helpers.py  plan.py  user.py
scripts/: import_csv_data.py  seed_data.py  test_csv_import.py
